Update the App CSS Component

--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,7 @@ h1 {
     font-size: 4.5rem;
     font-weight: bold;
     font-family: 'Nabla', cursive;
+    text-transform: uppercase;
+    word-spacing: 3rem;
 }
 
